worked on animation. looks fine in google Chrome and Safari. Firefox has a bug with overflow and transformcausing it to look choppy.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     font-family: courier;
+    cursor: url(img/asset.png), default; 
 }
 
 body {
@@ -97,19 +98,15 @@ h3 {
 }
 
 #two {
-    background: url(img/presley.jpg);
-    background-position: fixed;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
     top: 0;
+    -webkit-transform: translate(100%, -100%);
+    -moz-transform: translate(100%, -100%);
+    -o-transform: translate(100%, -100%);
     transform: translate(100%, -100%);
-    -webkit-transition: 550ms linear;
-    -o-transition: 550ms linear;
-    -moz-transition: 550ms linear;
-    transition: 550ms linear;
+    -webkit-transition: 550ms ease-in-out;
+    -o-transition: 550ms ease-in-out;
+    -moz-transition: 550ms ease-in-out;
+    transition: 550ms ease-in-out;
 
 }
 
@@ -118,10 +115,10 @@ h3 {
     -moz-transform: translate(0%, -100%);
     -o-transform: translate(0%, -100%);
     transform: translate(0%, -100%);
-    -webkit-transition: 550ms linear;
-    -o-transition: 550ms linear;
-    -moz-transition: 550ms linear;
-    transition: 550ms linear;
+    -webkit-transition: 550ms ease-in-out;
+    -o-transition: 550ms ease-in-out;
+    -moz-transition: 550ms ease-in-out;
+    transition: 550ms ease-in-out;
 } 
 
 .about-clicked #welcome {
@@ -129,33 +126,33 @@ h3 {
     -moz-transform: translateX(-100%);
     -o-transform: translateX(-100%);
     transform: translateX(-100%);
-    -webkit-transition: 550ms linear;
-    -o-transition: 550ms linear;
-    -moz-transition: 550ms linear;
-    transition: 550ms linear;
+    -webkit-transition: 550ms ease-in-out;
+    -o-transition: 550ms ease-in-out;
+    -moz-transition: 550ms ease-in-out;
+    transition: 550ms ease-in-out;
 }
-
+/*
 .about-clicked #contact-form {
     -webkit-transform: translate(0%, -300%);
     -moz-transform: translate(0%, -300%);
     -o-transform: translate(0%, -300%);
     transform: translate(0%, -300%);
-    -webkit-transition: 550ms linear;
-    -o-transition: 550ms linear;
-    -moz-transition: 550ms linear;
-    transition: 550ms linear;
+    -webkit-transition: 550ms ease-in-out;
+    -o-transition: 550ms ease-in-out;
+    -moz-transition: 550ms ease-in-out;
+    transition: 550ms ease-in-out;
 
 }
-
+*/
 .side-clicked #contact-form {
     -webkit-transform: translate(0%, -200%);
     -moz-transform: translate(0%, -200%);
     -o-transform: translate(0%, -200%);
     transform: translate(0%, -200%);
-    -webkit-transition: 550ms linear;
-    -o-transition: 550ms linear;
-    -moz-transition: 550ms linear;
-    transition: 550ms linear;
+    -webkit-transition: 550ms ease-in-out;
+    -o-transition: 550ms ease-in-out;
+    -moz-transition: 550ms ease-in-out;
+    transition: 550ms ease-in-out;
 }
 
 .side-clicked #welcome {
@@ -163,24 +160,24 @@ h3 {
     -moz-transform: translateY(100%);
     -o-transform: translateY(100%);
     transform: translateY(100%);
-    -webkit-transition: 550ms linear;
-    -o-transition: 550ms linear;
-    -moz-transition: 550ms linear;
-    transition: 550ms linear;
+    -webkit-transition: 550ms ease-in-out;
+    -o-transition: 550ms ease-in-out;
+    -moz-transition: 550ms ease-in-out;
+    transition: 550ms ease-in-out;
 }
-
+/*
 .side-clicked #two {
-    -webkit-transform: translate(100%, -100%);
-    -moz-transform: translate(100%, -100%);
-    -o-transform: translate(100%, -100%);
-    transform: translate(100%, -100%);
-    -webkit-transition: 550ms linear;
-    -o-transition: 550ms linear;
-    -moz-transition: 550ms linear;
-    transition: 550ms linear;
+    -webkit-transform: translate(0%, -100%);
+    -moz-transform: translate(0%, -100%);
+    -o-transform: translate(0%, -100%);
+    transform: translate(0%, -100%);
+    -webkit-transition: 550ms ease-in-out;
+    -o-transition: 550ms ease-in-out;
+    -moz-transition: 550ms ease-in-out;
+    transition: 550ms ease-in-out;
 
 }
-
+*/
 .about-clicked #about, .about-clicked #about::before {
     background: red;
 }
@@ -274,7 +271,7 @@ h3 {
 
 
 #nav-index, .nav-list, #nav-menu a {
-    cursor: pointer;
+    cursor: url(img/asset.png), auto;
 }
 
 .nav-list a {
@@ -413,10 +410,10 @@ h3 {
     -moz-transform: translate(0%, 0%);
     -o-transform: translate(0%, 0%);
     transform: translate(0%, 0%);
-    -webkit-transition: 550ms linear;
-    -o-transition: 550ms linear;
-    -moz-transition: 550ms linear;
-    transition: 550ms linear;
+    -webkit-transition: 550ms ease-in-out;
+    -o-transition: 550ms ease-in-out;
+    -moz-transition: 550ms ease-in-out;
+    transition: 550ms ease-in-out;
 }
 
 #side-form {
@@ -479,17 +476,19 @@ form > div {
     font-weight: 100;
     box-shadow: -13px 1px 0px -5px #befdff;
 }
-
+/*
 #message-wrapper {
-    width: 80%;
+    width: 100%;
+    height: 40%;
     position: absolute;
     bottom: 20px;
+    margin: 20% auto;
 }
-
+*/
 #message {
     position: relative;
-    bottom: 35px;
     height: 250px;
+    
 }
 
 @-webkit-keyframes textFade {
